[package]
name = "vineyard-datafusion"
version = { workspace = true }
description = "Vineyard Rust SDK: arrow datafusion integration for DataFrame"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard_datafusion"
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
vineyard = { workspace = true }

[dev-dependencies]
spectral = { workspace = true }
futures = { workspace = true }
