[package]
name = "vineyard-polars"
version = { workspace = true }
description = "Vineyard Rust SDK: polars integration for DataFrame"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard_polars"
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow2 = { workspace = true }
itertools = "0.11"
ndarray = "0.15"
polars-core = "0.32"
serde_json = "1.0"
vineyard = { workspace = true }

[dev-dependencies]
spectral = { workspace = true }
