[package]
name = "vineyard-polars"
version = { workspace = true }
description = "Vineyard Rust SDK: polars integration for DataFrame"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard_polars"
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow2 = { workspace = true }
itertools = { workspace = true }
polars-arrow = { workspace = true }
polars-core = { workspace = true }
serde_json = { workspace = true }
vineyard = { workspace = true }

[dev-dependencies]
spectral = { workspace = true }
