[package]
name = "vineyard"
version = "0.2.5"
description = "Rust implementation of Vineyard"
homepage = "https://github.com/v6d-io/v6d"
repository = "https://github.com/v6d-io/v6d"
license = "Apache-2.0"
keywords = [ "vineyard" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[lib]
name = "vineyard"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8.0"
lazy_static = "1.4.0"
arrow = "5.0"

