[package]
name = "vineyard"
version = { workspace = true }
description = "Vineyard Rust SDK: core library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard"
path = "src/lib.rs"

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
ctor = { workspace = true }
downcast-rs = { workspace = true }
gensym = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
sendfd = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
static_str_ops = { workspace = true }

[dev-dependencies]
spectral = { workspace = true }
